--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 body{
-    background-color: blue;
+    background-image: url('../images/hall.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.mycard{
+    background-color: rgba(0, 0, 0, 0.349);
+    width: 600px;
+    margin: 0 auto;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+main img{
+    width: 250px;
 }
