--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,24 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.title-form{
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+
+}
 body{
     background-image: url('../images/hall.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
+}
+button{
+    height: 30px;
+    padding: 0px 10px;
+    border-radius: 8px;
+
 }
 .mycard{
     background-color: rgba(0, 0, 0, 0.349);
@@ -10,7 +27,26 @@ body{
     border-radius: 20px;
     padding: 10px;
 }
+.mylist{
+    width: 100%;
+    border-radius: 20px;
+    margin-top: 20px;
+}
 
 main img{
     width: 250px;
+}
+
+.styled-table {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+td, th{
+    padding: 10px;
 }
